--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -155,7 +155,7 @@
             slot="welcome-section-0"
     >
         <div class='images'></div>
-        <div class='body'>
+        <div class='body--padding_70px_100px'>
             <div class="container">
                 <div class="navigation">
                     <slot name="welcome-menu_0_0"></slot>
