--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -98,6 +98,7 @@
         </div>
         <fer-button
                 data-services-path="rules"
+                data-event="Schema"
                 slot="button-0"
                 data-id="0"
                 data-type="welcome-menu"
@@ -109,6 +110,7 @@
         <fer-button
                 data-services-path="rules"
                 slot="button-1"
+                data-event="Rules"
                 data-id="1"
                 data-type="welcome-menu"
                 data-css-shadow="menu"
@@ -120,6 +122,7 @@
         <fer-button
                 data-services-path="rules"
                 slot="button-2"
+                data-event="Manifest"
                 data-id="2"
                 data-type="welcome-menu"
                 data-css-shadow="menu"
@@ -130,6 +133,7 @@
         <fer-button
                 data-services-path="rules"
                 slot="button-3"
+                data-event="Region"
                 data-id="3"
                 data-type="welcome-menu"
                 data-css-shadow="menu"
@@ -140,6 +144,7 @@
         <fer-button
                 data-services-path="rules"
                 slot="button-4"
+                data-event="Domain"
                 data-id="4"
                 data-type="welcome-menu"
                 data-css-shadow="menu"
