--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -278,16 +278,17 @@
             </div>
         </div>
 
-        <div
-            data-exclusion
-            slot="welcome-menu_0_0"
-        >
+<!--        <div-->
+<!--            data-exclusion-->
+<!--            slot="welcome-menu_0_0"-->
+<!--        >-->
             <fer-hash
                     data-services-path="rules"
                     data-id="0"
                     data-hash="general"
                     data-type="rules_0_0"
                     data-css-shadow="rules_0_0"
+                    slot="welcome-menu_0_0"
             >
                 <p>Основное</p>
             </fer-hash>
@@ -297,6 +298,7 @@
                     data-type="rules_0_0"
                     data-hash="verification"
                     data-css-shadow="rules_0_0"
+                    slot="welcome-menu_0_0"
             >
                 <p>Верификация</p>
             </fer-hash>
@@ -306,10 +308,11 @@
                     data-hash="execution"
                     data-type="rules_0_0"
                     data-css-shadow="rules_0_0"
+                    slot="welcome-menu_0_0"
             >
                 <p>Применение</p>
             </fer-hash>
-        </div>
+<!--        </div>-->
         <fer-form
                 data-services-path="rules"
                 data-css-shadow="rules_0_0"
