--- a/template/rules/index.html
+++ b/template/rules/index.html
@@ -604,6 +604,7 @@
                     data-services-path="rules"
                     data-type="fer-form"
                     data-id="cancel"
+                    data-to="0"
                     slot="fer-form__cancel"
             >
                 <p class="cancel">Отмена</p>
@@ -614,6 +615,7 @@
                     data-services-path="rules"
                     data-type="fer-form"
                     data-id="save"
+                    data-to="0"
                     slot="fer-form__save"
             >
                 <p class="save">Сохранить</p>
@@ -736,6 +738,7 @@
                 data-services-path="rules"
                 data-type="fer-form"
                 data-id="cancel"
+                data-to="1"
                 slot="fer-form__cancel"
         >
             <p class="cancel">Отмена</p>
@@ -746,6 +749,7 @@
                 data-services-path="rules"
                 data-type="fer-form"
                 data-id="save"
+                data-to="1"
                 slot="fer-form__save"
         >
             <p class="save">Сохранить</p>
